[package]
name = "demo"
version = "0.1.0"
authors = ["zhangguanghan <zhangguanghan@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.20"
surfman = "0.3"
surfman-chains = "0.4"
winit = "<0.19.4"
webrender = { path = "../webrender/webrender" }
gleam = "0.12.0"
env_logger = "*"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.7"
